hphp/hack/test/typecheck/const_attribute/usage/subclass_not_const.php
<?hh // strict

<<__Const>>
class A {}

<<__Const>>
class B extends A {}

class C extends A {}
